adição pasta imagem e nav no index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Página Pessoal Enza Pascal</title>
+    <title> Página Pessoal Enzo Pascal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        Freelancer
+        <nav>
+            Home
+            About
+            Services
+            Portfolio
+            Pricing
+            Experience
+        </nav>
+        <section>
+            helllooo
+        </section>
+       <img src="imagens/hero.png">
+    </div>
     
 </body>
 </html>
