background linear ajuste

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
 
-    <div>
+    <div class="background-linear">
         <nav>
             <ul class="barra-navegacao">
                 <li>Home</li>
