--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             
             </div>
             <!-- --------- IMAGEM ENZO AQUI -------- -->
-            <div class="foto"> <img src="imagens/hero.png" alt="" id="profile"/> </div>
+            <div class="foto"> <img src="imagens/mobile-UX-bro.png" alt="" id="profile"/> </div>
     
         </div>
 
